<resources>

    <!-- AndroidManifest.xml-->
    <string name="app_name">TrackMe</string>
    <string name="title_activity_maps">Trip Tracks</string>

    <!-- Permission Activity-->
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="permission_justify">Location access permission required.</string>
    <string name="exit_app">Location permission not granted.</string>
    <string name="exit">Exit</string>


    <!-- trip_popup.xml -->
    <string name="ok">OK</string>
    <string name="duration">Duration:</string>
    <string name="trip_summary">Trip Summary</string>
    <string name="date">Date:</string>
    <string name="date_lbl">Date</string>
    <string name="start_time">Start Time:</string>


    <!-- fragment_base_trip.xml -->
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>


    <!-- fragment_trip_list.xml -->
    <string name="new_trip">New Trip</string>
    <string name="display_trips">Display Trips</string>
    <string name="dismiss">DISMISS</string>
    <string name="max_select_snack">A maximum of 4 trips can be selected.</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="most_recent_sort">Trips ordered by most recent trip.</string>
    <string name="trips_ordered_oldest">Trips ordered by oldest trip.</string>
    <string name="trips_ordered_longest">Trips ordered by longest distance.</string>
    <string name="trips_ordered_shortest">Trips ordered by shortest distance.</string>
    <string name="date_filter">Trip list filtered by date range.</string>
    <string name="favorite_filter">Trip list filtered to only show favorites. </string>
    <string name="favorite_date_filter">Trip list filtered to only show favorites in a date range.</string>
    <string name="action_share">Share</string>
    <string name="trip">Trip</string>
    <string name="trip_elapsed">Trip Time (elapsed):</string>
    <string name="trip_list_subject">Trip Log</string>


    <!-- list_item_log.xml -->
    <string name="delete">delete</string>
    <string name="favorite">favorite</string>
    <string name="distance">Distance: </string>


    <!-- TrackLogAdapter -->
    <string name="max_trips_selected">Only 4 trips can be selected</string>

    <!-- ConfirmDeleteDialog -->
    <string name="confirm_trip_delete">Confirm Trip Deletion</string>
    <string name="delete_confirm">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="trip_deleted">Trip Deleted</string>
    <string name="trip_delete_cancel">Trip Delete Cancelled</string>


    <!-- activity_filter.xml  -->
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="filter_trip_list">Filter trip list by:</string>
    <string name="favorites_only">Favorites Only</string>
    <string name="date_range">Date Range</string>
    <string name="submit">Submit</string>


    <!-- activity_sort.xml  -->
    <string name="sort_trip_list">Sort trip list by:</string>
    <string name="recent_trips_first">Recent trips first.</string>
    <string name="oldest_trips_first">Oldest trips first.</string>
    <string name="shortest_trips_first">Shortest trips first.</string>
    <string name="longest_trips_first">Longest trips first.</string>


    <!-- fragment_map.xml -->
    <string name="hide">Hide</string>
    <string name="show">Show</string>

    <!-- LocationService -->
    <string name="channel_name">Notification Channel Name</string>
    <string name="sampling_service_notice">Location Sampling Service</string>
    <string name="launch_activity">Open TrackMe</string>
    <string name="remove_location_updates">Stop updates</string>

    <!-- LocationPreferences -->
    <string name="location_updated">Location Updated: %1$s</string>

    <!-- Widget -->
    <string name="open_list">Open trip list</string>
    <string name="start_trip">Start Trip</string>
    <string name="stop_trip">Stop Trip</string>

    <plurals name="seconds_plural">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>

    <plurals name="minutes_plural">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>

    <plurals name="hours_plural">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>

    <plurals name="miles_plural">
        <item quantity="one">mile</item>
        <item quantity="other">miles</item>
    </plurals>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="launch_app_icon">Launch app icon</string>
    <string name="trip_log">Trip Log</string>
    <string name="tracks">Tracks</string>
    <string name="log">Log</string>
    <string name="low_battery_message">Low battery level. Tracking disabled until battery charges.</string>
    <string name="exit_track_battery">Low Battery. Exit trip tracking until battery charges.</string>
    <string name="application_icon">Application Icon</string>
    <string name="sort_list">Sort List</string>
    <string name="filter_list">Filter List</string>

</resources>
