<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SortActivity">


    <TextView
        android:id="@+id/sort_heading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/sort_trip_list"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioFilterGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/sort_heading_tv"
        app:layout_constraintTop_toBottomOf="@+id/sort_heading_tv">

        <RadioButton
            android:id="@+id/date_newest_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/recent_trips_first" />

        <RadioButton
            android:id="@+id/date_oldest_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldest_trips_first" />

        <RadioButton
            android:id="@+id/dist_longest_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longest_trips_first" />

        <RadioButton
            android:id="@+id/dist_shortest_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortest_trips_first" />


    </RadioGroup>


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="@dimen/as_button_height"
        android:layout_height="@dimen/as_button_width"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/as_constraint_guide" />

</android.support.constraint.ConstraintLayout>