<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    android:padding="@dimen/margin_4"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_track_id"
            android:text="@string/start_trip"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop_track_id"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/stop_trip"/>
    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_list_id"
        android:src="@mipmap/ic_launcher"

        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/launch_app_icon" />
</LinearLayout>

