<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/distance_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/distance"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration_lbl" />

    <TextView
        android:id="@+id/duration_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/duration"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/duration_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time_lbl" />

    <TextView
        android:id="@+id/summary_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/trip_summary"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_lb" />

    <TextView
        android:id="@+id/date_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_lbl" />

    <TextView
        android:id="@+id/start_time_lbl"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:text="@string/start_time"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_lbl" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_lbl"
        tools:text="5/1/2018" />

    <TextView
        android:id="@+id/start_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_time_lbl"
        tools:text="10:00 AM" />

    <TextView
        android:id="@+id/duration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/distance_tv"
        app:layout_constraintEnd_toStartOf="@+id/duration_dimension_tv"
        app:layout_constraintTop_toBottomOf="@+id/start_time_tv"
        tools:text="30" />

    <TextView
        android:id="@+id/duration_dimension_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/duration_tv"
        tools:text="minutes" />

    <TextView
        android:id="@+id/distance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/distance_unit_lbl"
        app:layout_constraintTop_toTopOf="@+id/distance_lb"
        tools:text="10" />

    <TextView
        android:id="@+id/distance_unit_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/mile"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/distance_tv" />

</android.support.constraint.ConstraintLayout>